<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hermes Map Loader</string>
    <string name="menu_choose_map_type">Map type</string>
    <string name="menu_load_route">Load route</string>
    <string name="load_route_title">Load a kml file with the route</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_none">None</string>
    <string name="choose_file">Choose a file with .kml extension</string>
    <string name="kml_loaded_successfully">Loaded:</string>
    <string name="begin_route_message">BEGIN</string>
    <string name="end_route_message">END</string>
    <string name="menu_select_route_points">Create route</string>
    <string name="title_activity_off_line_map">OffLine Map</string>
    <string name="menu_change_offline_map">Offline map</string>
    <string name="menu_select_zone_for_storage">Store area</string>
    <string name="notification_download_title">Map downloads</string>
    <string name="notification_download_text">Downloads in progress</string>
    <string name="notification_download_finish">Downloads completed</string>
    <string name="message_download_successful">Download successful</string>
    <string name="message_download_failed">Download failed</string>
    <string name="kml_loaded_unsuccessfully">Fail loading:</string>
    <string name="choose_route_type">Choose the route type</string>
    <string name="route_type_walking">Walking</string>
    <string name="route_type_driving">Driving</string>
    <string name="route_type_bicycling">Bicycling</string>
    <string name="route_type_transit">Transit</string>
    <string name="route_empty">There is no route for this kind of transport</string>
    <string name="hint_kml_filename">Name</string>
    <string name="title_kml_filename">Select new file\'s name</string>
    <string name="button_kml_filename">OK</string>
    <string name="menu_save_current_route">Save route</string>
    <string name="register_competitor_name_label">Name</string>
    <string name="register_competitor_surname_label">Surname</string>
    <string name="register_competitor_email_label">Email</string>
    <string name="register_competitor_password_label">Password</string>
    <string name="register_competitor_image_content_description">User avatar</string>
    <string name="title_activity_register_competitor">Register user</string>
    <string name="action_settings">Settings</string>
    <string name="register_competitor_confirm_button">Create</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_main_page">Hermes Map Loader</string>
    <string name="select_map_online">Online Map</string>
    <string name="select_map_offline">Offline Map</string>
    <string name="title_activity_my_events">My events</string>
    <string name="button_add_event">Add a new event</string>
    <string name="fragment_title_main_page">Maps</string>
    <string name="fragment_title_find_event">Find events</string>
    <string name="fragment_title_my_events">My events</string>
    <string name="new_event_place">Event\'s place</string>
    <string name="new_event_name">Event\'s name</string>
    <string name="new_event_description">Event\'s description</string>
    <string name="new_event_is_private">The event is private</string>
    <string name="new_event_password">Password</string>
    <string name="new_event_begin_date">Date</string>
    <string name="new_event_button_add">Create a new event</string>
    <string name="button_login_competitor">Login</string>
    <string name="button_new_competitor">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="button_competitor_send_credentials">Send</string>
    <string name="messages_error_email_password_pair">There was an error with the validation</string>
    <string name="add_event_success">Event successfully added</string>
    <string name="add_event_fail">There was a problem adding the event</string>
    <string name="register_competitor_success">User added successfully</string>
    <string name="register_competitor_fail">There was a problem adding the new user</string>
    <string name="event_viewer_content_description">Image of the event</string>
    <string name="fragment_main_page_offline_maps_content_description">Offline maps</string>
    <string name="fragment_main_page_online_maps_content_description">Online maps</string>
    <string name="radio_button_event_privacity_private">Private</string>
    <string name="radio_button_event_privacity_friends_only">Friends</string>
    <string name="radio_button_event_privacity_public">Public</string>
    <string name="title_activity_edit_event">Edit event</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_event_button_edit">Update event</string>
    <string name="event_visualization_password">Password</string>
    <string name="edit_event_old_password">Old password</string>
    <string name="edit_event_new_password">New password</string>
    <string name="title_activity_event_visualization">Event visualization</string>
    <string name="button_join_event">Participate!</string>
    <string name="event_visualization_button_join">Join it!</string>
    <string name="event_visualization_button_leave">Leave it</string>
    <string name="event_visualization_button_begin_tracking">Begin tracking</string>
    <string name="event_visualization_visualize">Visualize</string>
    <string name="event_visualization_message_unavaliable_event">This event has no data yet</string>
    <string name="title_activity_event_track">Event tracking</string>
    <string name="notification_track_title">Currently tracking an event</string>
    <string name="notification_track_text">Hit the notification to see its progress</string>
    <string name="message_service_already_running">You cannot send coordinates for mora than one event</string>
    <string name="message_store_area">Choose two points in the map (use a long click)</string>
    <string name="notification_sending_data_finished">Data sending is finished</string>
    <string name="notification_service_stopped">Data sending successfully stopped</string>
    <string name="notification_service_not_stopped">Data sending could not be stopped</string>
    <string name="menu_clear">Clear all</string>

</resources>