<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_layout"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_map_online" />

        <ImageView
            android:id="@+id/image_online"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/fragment_main_page_online_maps_content_description"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/onlineimage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_map_offline" />

        <ImageView
            android:id="@+id/image_offline"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/fragment_main_page_offline_maps_content_description"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/offlineimage" />
    </LinearLayout>

</LinearLayout>