<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_layout"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <QuickContactBadge
                    android:id="@+id/new_event_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/panel_picture_frame_bg_normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_event_name"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/new_event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_event_place"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/new_event_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/new_event_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/new_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/new_event_begin_date"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/new_event_begin_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >
            </TextView>

            <TextView
                android:id="@+id/edit_event_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >
            </TextView>

            <RadioGroup
                android:id="@+id/radio_group_event_privacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_button_event_privacity_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/radio_button_event_privacity_private" />

                <RadioButton
                    android:id="@+id/radio_button_event_privacity_friends_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/radio_button_event_privacity_friends_only" />

                <RadioButton
                    android:id="@+id/radio_button_event_privacity_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/radio_button_event_privacity_public" />
            </RadioGroup>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:showDividers="middle" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/event_visualization_button_begin_tracking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:onClick="beginTracking"
                        android:text="@string/event_visualization_button_begin_tracking" />

                    <Button
                        android:id="@+id/event_visualization_button_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:onClick="loadEdition"
                        android:text="@string/edit_event_button_edit" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/event_visualization_button_join"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="changeEventStatus"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" />

                    <Button
                        android:id="@+id/event_visualization_button_visualize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="loadEventTrackingVisualization"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/event_visualization_visualize" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>