<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_layout"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progressbar"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="30dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_competitor_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_competitor_email_label"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/login_competitor_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_competitor_password_label"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_competitor_send_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="sendCredentials"
                android:padding="20dp"
                android:text="@string/button_competitor_send_credentials" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>